# LIbAM

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst  quickstart.rst
docs/source/api/: algorithms.rst  datasets.rst  evaluation.rst  graph.rst
docs/source/examples/: real_data.rst
example/: anchor_example.py  dev_run.py  example.ipynb  feature_example.py  gradp.py  multi_alg.py  noise_sweep.py  quickstart.ipynb  quickstart.py  real_data.py
not_Implemented/NextAlign/: NextA.py
not_Implemented/NextAlign/layers/: RelGCN.py
not_Implemented/NextAlign/model/: model.py
src/graphalign/: __init__.py  _logging.py
src/graphalign/algorithms/: __init__.py  algorithm.py  bipartiteMatching.py  bipartitewrapper.py
src/graphalign/algorithms/Fgot - Later/: bregman.py  fgot.py  sink_otm.py
src/graphalign/algorithms/Got - Later/: got.py
src/graphalign/algorithms/NextAlign - dgl/: NextA.py
src/graphalign/algorithms/restricted/GradP/: data.py  gradp.py  graph_utils.py  models.py  utils.py
src/graphalign/algorithms/restricted/HTC/: htc.py  utils.py
src/graphalign/algorithms/utils/: matrix_utils.py  utils.py
src/graphalign/evaluation/: __init__.py  evaluation.py  hungarian.py  matching.py  quadtree.py
src/graphalign/generation/: __init__.py  generate.py  similarities_preprocess.py
src/graphalign/graph/: __init__.py  graph_pair.py  loaders.py
src/libam/: __init__.py  _logging.py
src/libam/algorithms/: __init__.py  algorithm.py  bipartiteMatching.py  maxrowmatchcpp.py
src/libam/algorithms/restricted/HTC/: htc.py  (+2 more)
src/libam/algorithms/utils/: __init__.py  feature_util.py  math_utils.py  matrix_utils.py  mds.py  scores.py
src/libam/datasets/: __init__.py  _dataset.py  _loaders.py  _parsers.py  _registry.py
src/libam/evaluation/: __init__.py  evaluation.py  quadtree.py
src/libam/graph/: __init__.py  _generate.py  _similarities_preprocess.py  graph_pair.py
tests/: acc_test.py  datasets_test.py
(+76 files in other folders)
