[project]
name = "libam"
version = "1.0.0"
description = "LIbAM - A Standardized Graph Alignment Library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "funcsigs>=1.0.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "orbit-count>=0.1.0",
    "pandas>=3.0.1",
    "pooch>=1.9.0",
    "pot>=0.9.6.post1",
    "pymanopt>=2.2.1",
    "sacred>=0.8.7",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "setuptools<82.0.0",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]
docs = [
    "sphinx>=9.1.0",
]
demo = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.ruff.lint]
select = ["ANN"]
